# rules_gomplate

./: BUILD.bazel  MODULE.bazel  bazel-rules_gomplate  repositories.bzl
gomplate/: def.bzl  extensions.bzl  toolchains.bzl  versions.bzl
gomplate/rules/: binary.bzl
gomplate/toolchains/gomplate/: BUILD.toolchain.tpl  toolchain.bzl
lib/: gomplate_binary.bzl
rules/: BUILD.bazel  binary.bzl
